Wire Controller-Service-Repository together